syntax = "proto3";

package ledger;

service LedgerService {
  rpc DoAction(DoActionRequest) returns (DoActionResponse);

  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
}

message DoActionRequest {
  string content = 1;
}

message DoActionResponse {
  string content = 1;
}

message GetInfoRequest {
  string content = 1;
}

message GetInfoResponse {
 string content = 1;
}